<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.michael.trailerviewer.MoviePlayer">

    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="500px"
        android:id="@+id/vViewMovieTrailer"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:id="@+id/btnRestart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_trailer"
        android:id="@+id/btnDelete"
        android:layout_above="@+id/btnRestart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_trailer"
        android:id="@+id/btnRate"
        android:layout_above="@+id/btnDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbRateTrailer"
        android:stepSize="1"
        android:layout_above="@+id/btnRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:numStars="5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_filename"
        android:id="@+id/tvAddFileName"
        android:editable="true"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:layout_above="@+id/tvAddName"
        android:layout_alignRight="@+id/tvAddName"
        android:layout_alignEnd="@+id/tvAddName"
        android:textSize="10px" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_name"
        android:id="@+id/tvAddName"
        android:editable="true"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:layout_above="@+id/tvAddDescription"
        android:layout_alignRight="@+id/tvAddDescription"
        android:layout_alignEnd="@+id/tvAddDescription"
        android:textSize="10px" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_description"
        android:id="@+id/tvAddDescription"
        android:editable="true"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:layout_above="@+id/btnAdd"
        android:layout_alignRight="@+id/btnAdd"
        android:layout_alignEnd="@+id/btnAdd"
        android:textSize="10px" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_trailer"
        android:id="@+id/btnAdd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
